Conexant Flow is instantiating a11y and harming system performance
Categories
(Core :: Disability Access APIs, defect, P2)
Tracking
()
People
(Reporter: bugzilla, Assigned: Jamie)
References
Details
Attachments
(1 file)
|
47 bytes,
text/x-phabricator-request
|
RyanVM
:
approval-mozilla-beta+
RyanVM
:
approval-mozilla-esr68+
|
Details | Review |
A user on Reddit is reporting a11y performance issues that are caused by this instantiator process:
"accessibility": {
"isActive": true,
"forceDisabled": 0,
"handlerUsed": true,
"instantiator": "UNKNOWN|C:\\Program Files\\CONEXANT\\Flow\\Flow.exe"
},
A quick Googling shows that it is installed as part of HP Audio drivers (?!), so this might be fairly common.
| Assignee | ||
Comment 1•6 years ago
|
||
I can't think of any good reason Conexant Flow should be using accessibility. Furthermore, Asa did a bit of research and it looks like this tool has a history of rather concerning/careless/misguided behaviour; e.g. key logging, CPU spikes, etc. I think we should block this.
HP has released an advisory for this issue, but the drivers are still not available online: https://support.hp.com/us-en/document/c06209366?hprpt_id=HPGL_ALERTS_2033325&jumpid=em_alerts_us-us_Feb19_xbu_all_all_1785815_2033325_DesktopsWorkstationsLaptopsandHybrids_critical__/
Updating my above comment, the latest drivers available on the HP Support website for your product will resolve this issue. Specifically, the minimum version for the Audio Driver is 9.0.222.0, and the version I have confirmed works is 9.0.232.1 from sp95069. They removed the drivers linked in that article because there was a security flaw, according to the L3 tech I spoke to today.
| Assignee | ||
Comment 4•6 years ago
|
||
| Reporter | ||
Comment 6•6 years ago
|
||
[Tracking Requested - why for this release]:
Serious perf issue that probably affects a lot of HP machines out in the wild. It would be nice to get this into 68.0.2.
| Reporter | ||
Comment 7•6 years ago
|
||
[Tracking Requested - why for this release]:
Serious perf issue that probably affects a lot of HP machines out in the wild. It would be nice to get this into ESR68.
Comment 8•6 years ago
|
||
My understanding is that this isn't a new issue in Fx68. While I understand that this is can be annoying for users, we generally try to scope dot release uplifts to new regressions in the release or other high-impact bugs. For that reason, I'm going to track this for Fx69 and 68.1esr shipping in about a month. Let me know if you feel strongly that this needs to be in 68.0.2 before then and we can discuss.
Comment 9•6 years ago
|
||
| bugherder | ||
Comment 10•6 years ago
|
||
Please nominate this for Beta and ESR68 approval when you get a chance.
| Reporter | ||
Comment 11•6 years ago
|
||
Comment on attachment 9082160 [details]
Bug 1569712: Block Conexant Flow instantiating a11y to prevent performance issues.
Beta/Release Uplift Approval Request
- User impact if declined: Windows users running this particular third-party software may experience severe performance issues while running Firefox. Apparently this software is installed along with audio drivers on many HP devices, so this is likely pretty common.
- Is this code covered by automated tests?: No
- Has the fix been verified in Nightly?: Yes
- Needs manual test from QE?: No
- If yes, steps to reproduce:
- List of other uplifts needed: None
- Risk to taking this patch: Low
- Why is the change risky/not risky? (and alternatives if risky): Trivial patch, added the third-party application to the a11y remote client blocklist.
- String changes made/needed:
ESR Uplift Approval Request
- If this is not a sec:{high,crit} bug, please state case for ESR consideration: Performance issues.
- User impact if declined: Windows users running this particular third-party software may experience severe performance issues while running Firefox. Apparently this software is installed along with audio drivers on many HP devices, so this is likely pretty common.
- Fix Landed on Version: 70
- Risk to taking this patch: Low
- Why is the change risky/not risky? (and alternatives if risky): Trivial patch, added the third-party application to the a11y remote client blocklist.
- String or UUID changes made by this patch: None
| Reporter | ||
Comment 12•6 years ago
|
||
I took care of the nomination to get this up ASAP, since Jamie's workday won't start for a while yet.
Comment 13•6 years ago
|
||
Comment on attachment 9082160 [details]
Bug 1569712: Block Conexant Flow instantiating a11y to prevent performance issues.
Fixes a pretty big perf hit in some cases on HP systems. Approved for 69.0b11 and 68.1esr.
Comment 14•6 years ago
|
||
| bugherder uplift | ||
Comment 15•6 years ago
|
||
| bugherder uplift | ||
Comment 17•6 years ago
|
||
Hi,
Is the issue release yet ? I still have the problem with Firefox 71.0 64 bits.
The file is named Flow.exe on my computer (with capitale F) I see in the commit "flow.exe" (with lower f). Could this be the reason the bug is not solved ?
Thanks for your help, in the meantime I disabled the sound to get back my CPU... :-)
Best regards,
Romain.
| Assignee | ||
Comment 18•6 years ago
|
||
(In reply to romain.ger from comment #17)
Is the issue release yet ? I still have the problem with Firefox 71.0 64 bits.
The fix should definitely be in that version. Sorry it isn't working for you.
The file is named Flow.exe on my computer (with capitale F) I see in the commit "flow.exe" (with lower f). Could this be the reason the bug is not solved ?
No; case differences are ignored, so both flow.exe and Flow.exe will match.
With flow.exe running, Can you please go to about:support in your address bar and report what you see for "Accessibility instantiator" (under the Accessibility heading)? Thanks.
Comment 19•6 years ago
|
||
Hi James,
Thanks for the quick reply.
If my sound is enabled I have this :
"accessibility": {
"isActive": true,
"forceDisabled": 0,
"handlerUsed": true,
"instantiator": "UNKNOWN|C:\Program Files\CONEXANT\Flow\Flow.exe"
},
If my sound is disabled (so no CPU issue) :
"accessibility": {
"isActive": false,
"forceDisabled": 0,
"handlerUsed": true,
"instantiator": ""
},
Do you see something that might help ?
The screenshot showing CPU issue : https://imgshare.io/image/capture10.qqgcX
I have to say, this bug only produce if I use the sound of my computer speakers. If I use an USB headset or headphones with jack, I have no CPU issue.
Best regards,
Romain
Comment 20•5 years ago
|
||
Hi James,
Did you have time to look at my config and see if anything might explain why I sill have the issue with Firefox 71.0 64 bits ?
Thank you.
Best regards,
Romain.
| Assignee | ||
Comment 21•5 years ago
|
||
Sorry for the delay.
The fact that accessibility doesn't get enabled when sound is disabled does suggest that Flow isn't being blocked. Although I don't have Flow to test with, I tried renaming a screen reader to Flow.exe (capital F, but I also tried with a lower case f) and it does get blocked; accessibility doesn't get enabled. So, I guess Flow must be injecting a dll into Firefox as well which enables accessibility?
Romain, as per comment 3, this issue should be fixed by the latest version of the audio driver. Could you try installing that and see if this rectifies the issue? While it's not ideal that this block isn't working as expected, diagnosing this is going to be fairly intensive, and if the problem has been fixed at its source, that is a better solution. Thanks.
Comment 22•5 years ago
|
||
Hi James,
Thanks for the reply. I updated The Conexant Audio Driver. I now have 9.0.239.0 version of the driver. So far it seems good, no high CPU usage with Flow.exe and Firefox.
Sorry I missed the Comment 3.
Best regards,
Romain.
Description
•