Bug 1569712: Block Conexant Flow instantiating a11y to prevent performance issues. r=MarcoZ

Differential Revision: https://phabricator.services.mozilla.com/D40149