accessible/windows/msaa/LazyInstantiator.cpp
@@ -165,7 +165,8 @@ LazyInstantiator::GetClientPid(const DWORD aClientTid) {
  * This is the blocklist for known "bad" remote clients that instantiate a11y.
  */
 static const char* gBlockedRemoteClients[] = {
-    "tbnotifier.exe"  // Ask.com Toolbar, bug 1453876
+    "tbnotifier.exe",  // Ask.com Toolbar, bug 1453876
+    "flow.exe"         // Conexant Flow causes performance issues, bug 1569712
 };
 
 /**
